// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the unexpected error alert component renders as expected if there is an error and not saving 1`] = `
<div
  aria-live="polite"
>
  <Dialog
    className="ds-u-left-border-warning"
    closeButtonVariation="transparent"
    closeIcon={<CloseIcon />}
    escapeExitDisabled={false}
    escapeExits={true}
    heading={
      <div>
        <FontAwesomeIcon
          beat={false}
          beatFade={false}
          border={false}
          bounce={false}
          className=""
          fade={false}
          fixedWidth={false}
          flip={false}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [
                  9888,
                  "exclamation-triangle",
                  "warning",
                ],
                "f071",
                "M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480H40c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24V296c0 13.3 10.7 24 24 24s24-10.7 24-24V184c0-13.3-10.7-24-24-24zm32 224a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z",
              ],
              "iconName": "triangle-exclamation",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          maskId={null}
          pull={null}
          pulse={false}
          rotation={null}
          shake={false}
          size={null}
          spin={false}
          spinPulse={false}
          spinReverse={false}
          swapOpacity={false}
          symbol={false}
          title=""
          titleId={null}
          transform={null}
        />
         Unable to save changes!
      </div>
    }
    onExit={[Function]}
    underlayClickExits={false}
  >
    <p>
      Your changes aren't being saved. Verify your internet connection and try saving your changes again in a few minutes by clicking on the save button. If you refresh your browser without saving, changes made after this message appeared will be lost.
    </p>
    <p>
      If your internet connection is working and this message persists for more than 5 minutes, please contact us at
       
      <a
        href="mailto:CMS-EAPD@cms.hhs.gov"
      >
        CMS-EAPD@cms.hhs.gov
      </a>
      .
    </p>
    <p
      className="ds-u-text-align--right ds-u-margin-bottom--0"
    >
      <Button
        onClick={[MockFunction]}
        variation="primary"
      >
        Save
      </Button>
    </p>
  </Dialog>
</div>
`;

exports[`the unexpected error alert component renders as expected if there is and error and is saving 1`] = `
<div
  aria-live="polite"
>
  <Dialog
    className="ds-u-left-border-warning"
    closeButtonVariation="transparent"
    closeIcon={<CloseIcon />}
    escapeExitDisabled={false}
    escapeExits={true}
    heading={
      <div>
        <FontAwesomeIcon
          beat={false}
          beatFade={false}
          border={false}
          bounce={false}
          className=""
          fade={false}
          fixedWidth={false}
          flip={false}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [
                  9888,
                  "exclamation-triangle",
                  "warning",
                ],
                "f071",
                "M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480H40c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24V296c0 13.3 10.7 24 24 24s24-10.7 24-24V184c0-13.3-10.7-24-24-24zm32 224a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z",
              ],
              "iconName": "triangle-exclamation",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          maskId={null}
          pull={null}
          pulse={false}
          rotation={null}
          shake={false}
          size={null}
          spin={false}
          spinPulse={false}
          spinReverse={false}
          swapOpacity={false}
          symbol={false}
          title=""
          titleId={null}
          transform={null}
        />
         Unable to save changes!
      </div>
    }
    onExit={[Function]}
    underlayClickExits={false}
  >
    <p>
      Your changes aren't being saved. Verify your internet connection and try saving your changes again in a few minutes by clicking on the save button. If you refresh your browser without saving, changes made after this message appeared will be lost.
    </p>
    <p>
      If your internet connection is working and this message persists for more than 5 minutes, please contact us at
       
      <a
        href="mailto:CMS-EAPD@cms.hhs.gov"
      >
        CMS-EAPD@cms.hhs.gov
      </a>
      .
    </p>
    <p
      className="ds-u-text-align--right ds-u-margin-bottom--0"
    >
      <Button
        onClick={[MockFunction]}
        variation="primary"
      >
        <Spinner />
         Saving
      </Button>
    </p>
  </Dialog>
</div>
`;

exports[`the unexpected error alert component renders as expected if there is no error and not saving 1`] = `
<div
  aria-live="polite"
/>
`;
